# ant-ffi

./: .gitignore  .swiftformat  Package.swift  README.md  flake.nix  jitpack.yml
.github/workflows/: android.yml  csharp.yml  dart.yml  go.yml  ios.yml  lua.yml  php.yml  release.yml  rust.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/core/: build.gradle
android/gradle/: libs.versions.toml
csharp/: AntFfi.sln  run-tests.bat  run-tests.ps1  test.runsettings
csharp/AntFfi/: AntFfi.csproj  Archive.cs  Client.cs  Data.cs  Exceptions.cs  GraphEntry.cs  KeyDerivation.cs  Keys.cs  Network.cs  Pointer.cs  Register.cs  Scratchpad.cs  SelfEncryption.cs  Vault.cs  Wallet.cs
csharp/AntFfi.Tests/: AntFfi.Tests.csproj  ClientTests.cs  DataTypeTests.cs  KeyTests.cs  SelfEncryptionTests.cs
dart/ant_ffi/: dart_test.yaml  ffigen.yaml  pubspec.yaml
dart/flutter_example/: README.md  pubspec.yaml
docs/: C_API.md
examples/c/: Makefile  README.md  self_encryption.c
examples/ios/: .gitignore  README.md
go/: PLAN.md  go.mod
go/antffi/: antffi.go  archive.go  async.go  client.go  data.go  errors.go  graphentry.go  helpers.go  keyderivation.go  keys.go  network.go  pointer.go  register.go  scratchpad.go  selfencryption.go  stream.go  types.go  vault.go  wallet.go
rust/: Cargo.toml  build-ios.sh  rust-toolchain.toml
rust/autonomi/: Cargo.toml
rust/autonomi/src/: archive.rs  data.rs  graph_entry.rs  key_derivation.rs  keys.rs  lib.rs  pointer.rs  registers.rs  scratchpad.rs  self_encryption.rs  streaming.rs  vault.rs
(+155 files in other folders)
