[package]
name = "ant-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
autonomi = { package = "autonomi", version = "0.6.1" }
bytes = "1.0.1"
rmp-serde = "1.1.1"
self_encryption = "0.34.0"
thiserror = "1.0"
uniffi.workspace = true

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }
