[package]
name = "ant-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
autonomi = { package = "autonomi", version = "0.6.3" }
blsttc = "8"
bytes = "1.0.1"
hex = "0.4"
rmp-serde = "1.1.1"
self_encryption = "0.34.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi = { workspace = true, features = ["tokio"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }
